# Path_planning_ompl

./: README.md
pp_ompl/: CMakeLists.txt  package.xml
pp_ompl/src/: rrt_demo.cpp
